--- a/css/resume.css
+++ b/css/resume.css
@@ -26,7 +26,7 @@ h6 {
 	font-family: 'Saira Extra Condensed', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 	font-weight: 700;
 	text-transform: uppercase;
-	color: #343a40;
+	color: #C694F6;
 }
 
 h1 {
@@ -72,7 +72,7 @@ p.lead {
 }
 
 .social-icons a:hover {
-	background-color: #00DEDB;
+	background-color: #BD5D38;
 }
 
 .dev-icons {
@@ -80,7 +80,7 @@ p.lead {
 }
 
 .dev-icons .list-inline-item i:hover {
-	color: #00DEDB;
+	color: #BD5D38;
 }
 
 #sideNav .navbar-nav .nav-item .nav-link {
@@ -116,7 +116,7 @@ p.lead {
 		margin: auto auto 0;
 		padding: 0.5rem;
 	}
-	#sideNav .navbar-brand .img-Cepaluni_profile {
+	#sideNav .navbar-brand .img-profile {
 		max-width: 10rem;
 		max-height: 10rem;
 		border: 0.5rem solid rgba(255, 255, 255, 0.2);
@@ -176,15 +176,15 @@ section.resume-section .resume-item .resume-date {
 }
 
 .bg-primary {
-	background-color: #00DEDB !important;
+	background-color: #BD5D38 !important;
 }
 
 .text-primary {
-	color: #00DEDB !important;
+	color: #BD5D38 !important;
 }
 
 a {
-	color: #00DEDB;
+	color: #BD5D38;
 }
 
 a:hover, a:focus, a:active {
